# Advent-of-Code-2021-OPD

aoc-2021-dm/01_sonar_sweep/src/: main.rs
aoc-2021-dm/02_dive/src/: main.rs
aoc-2021-md/01/src/: main.rs
aoc-2021-md/02/src/: main.rs
aoc-2021-md/03/src/: main.rs
aoc-2021-md/04/src/: main.rs
aoc-2021-mm/: Cargo.toml
aoc-2021-mm/src/: amphipod.rs  arithmetic_logic_unit.rs  beacon_scanner.rs  binary_diagnostic.rs  chiton.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  dirac_dice.rs  dive.rs  dumbo_octopus.rs  extended_polymerization.rs  giant_squid.rs  hydrothermal_venture.rs  lanternfish.rs  main.rs  packet_decoder.rs  passage_pathing.rs  (+13 more)
aoc-2021-mm/tasks/01_sonar_sweep/: example_out
aoc-2021-sk/day1-scala/: main.sc
aoc-2021-sk/day2/src/: main.rs
aoc-2021-sk/day3/src/: main.rs
aoc-2021-sk/day4/src/: main.rs
aoc-2021-sk/day6/: day6.ml
