[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-framework = { git = "https://github.com/Michal-Miko/aoc-framework.git", tag = "0.7.0" }
color-eyre = "0.6.2"
itertools = "0.11.0"
regex = "1.9.5"
thiserror = "1.0.48"
